Fixing https://wso2.org/jira/browse/IDENTITY-5645

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
@@ -49,10 +49,7 @@
                                         <input type="hidden" name="domain" id="domain"
                                                class="form-control"/>
                                         <label for="domainSelector" class="control-label">{{i18n "domain"}}</label>
-                                        <select class="form-control" id="domainSelector">
-                                            {{#if primaryDomainName}}
-                                                <option primary={{primaryDomainName}} value={{primaryDomainName}}>{{primaryDomainName}}</option>
-                                            {{/if}}
+                                        <select class="form-control" id="domainSelector" data-primary={{primaryDomainName}}>
                                             {{#each domainNames}}
                                                 <option value={{this}}>{{this}}</option>
                                             {{/each}}
