--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
@@ -69,7 +69,7 @@
                             </div>
                             <div class="form-group">
                                 <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
-                                    <label for="password" class="control-label">{{i18n "passowrd"}}</label>
+                                    <label for="password" class="control-label">{{i18n "password"}}</label>
 
                                     <div class="input-group input-wrap">
                                         <input type="password" name="password" class="form-control" id="password">
@@ -87,7 +87,7 @@
                             <p>{{i18n "forgot.your"}}&nbsp;<a
                                     href="{{@contextPath}}/recovery/username">{{i18n "username"}}
                             </a>&nbsp;{{i18n "or"}}&nbsp;<a href="{{@contextPath}}/recovery/password">
-                                {{i18n "password"}}</a>&nbsp;?
+                                {{i18n "password"}}?</a>
                             </p>
 
                             <p class="hidden-xs hidden-sm">{{i18n "signup.message"}}<a
