Enable extendability for username and passwork recovery in UserPortal

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
@@ -85,8 +85,8 @@
                                 </div>
                             </div>
                             <p>{{i18n "forgot.your"}}&nbsp;<a
-                                    href="{{@contextPath}}/recovery/username">{{i18n "username"}}
-                            </a>&nbsp;{{i18n "or"}}&nbsp;<a href="{{@contextPath}}/recovery/password">
+                                    href="{{usernameRecoveryUrl}}">{{i18n "username"}}
+                            </a>&nbsp;{{i18n "or"}}&nbsp;<a href="{{passwordRecoveryUrl}}">
                                 {{i18n "password"}}</a>&nbsp;?
                             </p>
 
