--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password-options.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password-options.hbs
@@ -56,6 +56,13 @@
                                                 <span class="helper">{{i18n "password.recovery.with.security.questions"}}
                                                 </span>
                                             </label>
+                                            {{#if externalOption}}
+                                                <label class="custom-radio">
+                                                    <input type="radio" name="recover-option"
+                                                           value="external-pwd-recovery">
+                                                <span class="helper">{{i18n "password.recovery.external.option"}}</span>
+                                                </label>
+                                            {{/if}}
                                         </div>
                                     </div>
                                     <div class="form-group recover-option-container">
@@ -91,6 +98,17 @@
                                             </div>
                                         </div>
                                     </div>
+                                    {{#if externalOption}}
+                                        <div class="form-group recover-option-container">
+                                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                                <div class="external-pwd-recovery">
+                                                    <div class="wizard-container">
+                                                        {{fragment "external-pwd-recovery"}}
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    {{/if}}
                                 {{/if}}
                             </form>
                         </div>
