IDENTITY-5654 fix Account crash setting security questions after adding profile image

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-questions/security-questions.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-questions/security-questions.hbs
@@ -29,7 +29,7 @@
     {{/if}}
 {{/if}}
 <div id="add-question" class="well">
-    <form class="form-horizontal" method="post">
+    <form class="form-horizontal" method="post" action="?security-questions#security-questions">
         <div id="new-security-question">
             <div class="form-group">
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5">
@@ -92,7 +92,7 @@
             <p>{{t "security.question.info.body"}}</p>
         </div>
     </div>
-    <form class="form-horizontal" method="post" id="questionUpdateForm">
+    <form class="form-horizontal" method="post" id="questionUpdateForm" action="?security-questions#security-questions">
         <div id="password">
             <div class="form-group">
                 <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
