--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
@@ -48,8 +48,7 @@
                                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                                         <input type="hidden" name="domain" id="domain"
                                                class="form-control"/>
-                                        <select class="form-control" id="domainSelector">
-                                            <option value="default">{{i18n "signup.domain.placeholder"}}</option>
+                                        <select class="form-control" id="domainSelector" data-primary={{primaryDomainName}}>
                                             {{#each domainNames}}
                                                 <option value={{this}}>{{this}}</option>
                                             {{/each}}
