Fixed issue in sending answer as null in security question update

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-questions/security-questions.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-questions/security-questions.hbs
@@ -111,7 +111,7 @@
             <div class="form-group">
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5">
                     <label class="control-label">{{i18n "signup.security.question.answer"}}</label>
-                    <input class="form-control" type="text" id="answer">
+                    <input class="form-control" type="text" id="new-answer" name="new-answer">
                 </div>
             </div>
         </div>
