--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
@@ -50,7 +50,7 @@
                                                class="form-control"/>
                                         <label for="domainSelector" class="control-label">{{i18n "domain"}}</label>
                                         <select class="form-control" id="domainSelector"
-                                                data-primary={{primaryDomainName}}>
+                                                data-primary="{{primaryDomainName}}">
                                             {{#each domainNames}}
                                                 <option value={{this}}>{{this}}</option>
                                             {{/each}}
