--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password-reset.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password-reset.hbs
@@ -3,7 +3,6 @@
 {{css "css/user-portal.css"}}
 {{js "js/script.js"}}
 {{js "js/left-navigation.js"}}
-{{js "js/recover-password-options.js"}}
 {{fragment "org.wso2.carbon.uuf.common.foundation.ui.uuf-client"}}
 
 {{#fillZone "content"}}
@@ -36,7 +35,7 @@
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 login">
                         <div class="data-container">
-                            <form class="form-horizontal">
+                            <form class="form-horizontal" method="post">
                                 <h3>{{i18n "reset.password"}}</h3>
 
                                 <p>{{i18n "select.new.password"}}</p>
@@ -44,7 +43,7 @@
                                 <div class="form-group add-margin-top-5x">
                                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                                         <label for="input-pass" class="control-label">{{i18n "password"}}</label>
-                                        <input type="password" class="form-control" id="input-pass">
+                                        <input type="password" class="form-control" id="input-pass" name="input-password">
                                     </div>
                                 </div>
                                 <div class="form-group">
