--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/username.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/username.hbs
@@ -39,6 +39,18 @@
                         <div class="data-container">
                             <form class="form-horizontal" method="post">
                                 <h3>Recover Username</h3>
+                                {{#if isUsernameRecoveryDisabled}}
+                                        <div>
+                                            <h3>{{i18n "username.recovery"}}</h3>
+                                            <p>{{i18n "recovery.not.enabled"}}</p>
+                                            <div class="row">
+                                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                                    <a href="{{@contextPath}}/" class="add-margin-top-2x">
+                                                        {{i18n "back.to.sign.in"}}</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                {{else}}
                                 <p>Please fill in the below form to recover your username</p>
                                 <div class="form-group add-margin-top-5x">
                                      {{#each usernameRecoveryClaims}}
@@ -54,10 +66,11 @@
                                 <div class="form-group add-margin-top-5x">
                                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                                         <button type="submit" class="btn btn-default btn-primary add-margin-right-2x">Recover</button>
-                                        <a href="/login" class="hidden-xs hidden-sm">Back to sign in</a>
+                                        <a href="{{@contextPath}}/" class="hidden-xs hidden-sm">Back to sign in</a>
                                         <!--<a href="/login" class="visible-xs visible-sm add-margin-2x text-center">Back to sign in</a>-->
                                     </div>
                                 </div>
+                                {{/if}}
                             </form>
                         </div>
                     </div>
