--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
@@ -70,7 +70,7 @@
                             </div>
                             <div class="form-group">
                                 <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
-                                    <label for="password" class="control-label">{{i18n "passoword"}}</label>
+                                    <label for="password" class="control-label">{{i18n "password"}}</label>
 
                                     <div class="input-group input-wrap">
                                         <input type="password" name="password" class="form-control" id="password">
