IDENTITY-5651 fix the issue of adding empty values

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-questions/security-questions.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-questions/security-questions.hbs
@@ -1,8 +1,15 @@
 {{css "css/security-questions.css"}}
 {{js "js/security-questions.js"}}
+{{fragment "org.wso2.carbon.uuf.common.foundation.ui.uuf-client"}}
 
 <h3>{{i18n "account.securityQ"}}</h3>
 <hr/>
+
+{{#defineZone "minQuestionError-area"}}
+    <div id="minQuestionError">
+        <!-- Error message for minimum num of questions is displayed here -->
+    </div>
+{{/defineZone}}
 {{#if success}}
     {{#if message}}
         <div class="alert alert-success" role="alert">
@@ -48,50 +55,56 @@
     </div>
 {{/if}}
 {{#if isUserAuthenticated}}
-<div id="add-question">
-    <form class="form-horizontal" method="post" action="?security-questions#security-questions">
-        <div id="new-security-question">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
-                <div class="row">
-                    <table class="table table-striped">
-                        <thead>
+    <div id="add-question">
+        <form class="form-horizontal" method="post" id="questionAdd" action="?security-questions#security-questions">
+            <div class="message message-info">
+                <p><i class="icon fw fw-info"></i>{{i18n "security.question.add.info.body.part1"}}&nbsp;{{minQuestions}}
+                    {{i18n "security.question.add.info.body.part2"}}</p>
+            </div>
+            <div id="new-security-question">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
+                    <div class="row">
+                        <table class="table table-striped">
+                            <thead>
                             <tr>
                                 <th>{{i18n "security.question.label.securityQ"}}</th>
                                 <th>{{i18n "security.question.label.answer"}}</th>
                             </tr>
-                        </thead>
-                        {{#each questionList}}
-                            <tr>
-                                <td>
-                                    <select class="form-control" id="question-list" name="question_list"
-                                            aria-labelledby="questions-dropdown">
-                                        {{#each challengeQuestionList}}
-                                            <option name="{{questionSetId}}"
-                                                    value="{{questionSetId}}:{{questionId}}">{{question}}</option>
-                                        {{/each}}
-                                    </select>
-                                </td>
-                                <td>
-                                    <div class="table-input">
-                                    <input id="question-answer-{{challengeQuestionSetId}}"
-                                           name="question-answer-{{challengeQuestionSetId}}" type="text"
-                                           class="form-control">
-                                    </div>
-                                </td>
-                            </tr>
-                        {{/each}}
-                    </table>
+                            </thead>
+                            {{#each questionList}}
+                                <tr>
+                                    <td>
+                                        <select class="form-control" id="question-list" name="question_list"
+                                                aria-labelledby="questions-dropdown">
+                                            {{#each challengeQuestionList}}
+                                                <option name="{{questionSetId}}"
+                                                        value="{{questionSetId}}:{{questionId}}">{{question}}</option>
+                                            {{/each}}
+                                        </select>
+                                    </td>
+                                    <td>
+                                        <div class="table-input">
+                                            <input id="question-answer-{{challengeQuestionSetId}}"
+                                                   name="question-answer-{{challengeQuestionSetId}}" type="text"
+                                                   class="form-control question-answer">
+                                        </div>
+                                    </td>
+                                </tr>
+                            {{/each}}
+                        </table>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
-            <div class="row">
-                <input type="hidden" name="action" value="add-question">
-                <button type="submit" class="btn btn-primary">{{i18n "security.question.label.add"}}</button>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
+                <div class="row">
+                    <input type="hidden" id="min-questions" name="min-questions" value={{minQuestions}}>
+                    <input type="hidden" name="action" value="add-question">
+                    <button type="button" class="btn btn-primary"
+                            onclick="checkMinQuestion()">{{i18n "security.question.label.add"}}</button>
+                </div>
             </div>
-        </div>
-    </form>
-</div>
+        </form>
+    </div>
 {{/if}}
 {{#if isUserHasQuestions }}
     <div id="list-questions">
