Update method renaming in the hbs file

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-questions/security-questions.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-questions/security-questions.hbs
@@ -100,7 +100,7 @@
                     <input type="hidden" id="min-questions" name="min-questions" value={{minQuestions}}>
                     <input type="hidden" name="action" value="add-question">
                     <button type="button" class="btn btn-primary"
-                            onclick="checkMinQuestion()">{{i18n "security.question.label.add"}}</button>
+                            onclick="checkMinQuestions()">{{i18n "security.question.label.add"}}</button>
                 </div>
             </div>
         </form>
