--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
@@ -80,19 +80,19 @@
                             <div class="form-group">
                                 <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                                     <button type="submit"
-                                            class="btn btn-default btn-primary add-margin-right-2x">{{i18n "login.title"}}</button>
+                                            class="btn btn-default btn-primary add-margin-right-2x" id="sign-in">{{i18n "login.title"}}</button>
                                     <!--not yet implemented-->
                                     <!--<button type="submit" class="btn btn-default btn-secondary hidden-xs hidden-sm">Go Back</button>-->
                                 </div>
                             </div>
                             <p>{{i18n "forgot.your"}}&nbsp;<a
-                                    href="{{recoveryInfo.usernameRecoveryUrl}}">{{i18n "username"}}
-                            </a>&nbsp;{{i18n "or"}}&nbsp;<a href="{{recoveryInfo.passwordRecoveryUrl}}">
+                                    href="{{recoveryInfo.usernameRecoveryUrl}}" id="recover-username">{{i18n "username"}}
+                            </a>&nbsp;{{i18n "or"}}&nbsp;<a href="{{recoveryInfo.passwordRecoveryUrl}}" id="recover-password">
                                 {{i18n "password"}}</a>&nbsp;?
                             </p>
 
                             <p class="hidden-xs hidden-sm">{{i18n "signup.message"}}<a
-                                    href="{{@contextPath}}/signup">&nbsp;{{i18n "signup.title"}}</a>
+                                    href="{{@contextPath}}/signup" id="sign-up">&nbsp;{{i18n "signup.title"}}</a>
                             </p>
                         </form>
                     </div>
